--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="BaseClass.js"></script>
     <script src="Ground.js"></script>
     <script src="Slingshot.js"></script>
-    <script src="Box.js"></script>
+    <script src="bx.js"></script>
     <meta charset="utf-8">
 
 </head>
